--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. 
+      Hello world this was my first react app
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
